# EdgeComputingCV

./: .gitignore  README.md
docs/02 - OnlyOneBook/: README.md
docs/02 - OnlyOneBook/C Primer Plus/: 1 - 初识C语言.md  2 - C语言概述.md  3 - 数据和C.md
docs/02 - OnlyOneBook/C&C++/: 01 - 面向对象的高级编程（上）.md  02 - 面向对象的高级编程（下）.md  04 - C++11&14 新特性.md  README.md
docs/02 - OnlyOneBook/C&C++/code/: CMakeLists.txt  build.sh
docs/02 - OnlyOneBook/C&C++/code/OOP1/: CMakeLists.txt
docs/02 - OnlyOneBook/C&C++/code/OOP1/complex/: CMakeLists.txt  complex.h
docs/02 - OnlyOneBook/C&C++/code/OOP1/string/: CMakeLists.txt  string.h
docs/02 - OnlyOneBook/C&C++/code/OOP2/: CMakeLists.txt
docs/02 - OnlyOneBook/C&C++/code/OOP2/C++OOP2/: C++OOP2.cpp  CMakeLists.txt
docs/02 - OnlyOneBook/C&C++/code/OOP2/DyBinding/: CMakeLists.txt  DyBinding.cpp
docs/02 - OnlyOneBook/C&C++/code/OOP2/const/: CMakeLists.txt  const.cpp
docs/02 - OnlyOneBook/C&C++/code/OOP2/convertFunc/: CMakeLists.txt  convertFunc.cpp
docs/02 - OnlyOneBook/C&C++/code/OOP2/funcClass/: CMakeLists.txt  funcClass.cpp
docs/02 - OnlyOneBook/C&C++/code/OOP2/override/: CMakeLists.txt  override.cpp
docs/02 - OnlyOneBook/C&C++/code/OOP2/ptrClass/: CMakeLists.txt  ptrClass.cpp
docs/02 - OnlyOneBook/C&C++/code/OOP2/reference/: CMakeLists.txt  reference.cpp
docs/02 - OnlyOneBook/C&C++/code/OOP3/: CMakeLists.txt
docs/02 - OnlyOneBook/C&C++/code/OOP3/VariadicTemplates/: CMakeLists.txt  VariadicTemplates.cpp
docs/02 - OnlyOneBook/C&C++/code/complex/: CMakeLists.txt  complex.cpp  complex.h
docs/02 - OnlyOneBook/C&C++/code/string/: CMakeLists.txt  string.cpp
docs/02 - OnlyOneBook/CSAPP/: 1 - 计算机系统漫游.md  2 - 信息的表示和处理.md
docs/02 - OnlyOneBook/Linux/: 01 - Basic cmd.md  README.md
docs/02 - OnlyOneBook/Professional CUDA C Programming/: 1 - 简介.md  2 - CUDA 编程模型.md  3 - CUDA 执行模型.md  4 - CUDA 全局内存.md  README.md
docs/02 - OnlyOneBook/Professional CUDA C Programming/code/: CMakeLists.txt
docs/02 - OnlyOneBook/Professional CUDA C Programming/code/chapter01/: CMakeLists.txt  helloWorld.cu
docs/02 - OnlyOneBook/Professional CUDA C Programming/code/chapter02/: CMakeLists.txt  checkDeviceInfor.cu  checkDimension.cu  checkThreadIndex.cu  checkThreadIndexFloat.cu  defineGridBlock.cu  sumArrays.cu  sumArraysOnGPU-small-case.cu  sumArraysTimer.cu  sumMatrix.cu
docs/02 - OnlyOneBook/Professional CUDA C Programming/code/chapter03/: CMakeLists.txt  nestedHelloWorld.cu  reduceInteger.cu  reduceUnrolling.cu  simpleDeviceQuery.cu  simpleDivergence.cu  sumMatrix2D.cu
docs/02 - OnlyOneBook/Professional CUDA C Programming/code/chapter04/: AoS.cu  CMakeLists.txt  SoA.cu  UVA.cu  checkRegisters.cu  globalVariable.cu  pinMemTransfer.cu  sumArrayOffset.cu  sumArrayOffsetUnrolling.cu  sumArrayZeroCopy.cu
docs/02 - OnlyOneBook/Professional CUDA C Programming/code/common/: common.h
docs/03 - AI Models/DeepLearning/02 - Classification/MobileNet/: MobileNetV1.md
docs/03 - AI Models/Large Language Models/01 - LLM Introduction/: LLM Inference.md
docs/04 - Framework/CUDA/operators/Add_operator/: add_op.cu
docs/04 - Framework/CUDA/operators/Add_operator/MatMul_operator/: CMakeLists.txt  MatMul_op.cu
docs/04 - Framework/CUDA/operators/Div_operator/: CMakeLists.txt
docs/04 - Framework/CUDA/operators/Mul_operator/: mul_op.cu
docs/04 - Framework/CUDA/operators/VectorAdd_operator/: CMakeLists.txt  vectoradd_op.cu
docs/05 - Tools/: 服务器配置.md
docs/05 - Tools/Template/CUDA/: CMakeLists.txt
docs/05 - Tools/Template/CUDA/subdir/: CMakeLists.txt
docs/05 - Tools/Template/CUDA/subdir/subdir/: CMakeLists.txt
docs/05 - Tools/Template/Google Style Cpp/: .clang-format
docs/Embodied_AI/: 具身智能简介.md
docs/Model_Accelaration/: README.md  模型量化简介.md
docs/Model_Accelaration/Basic_methods/: AdaRound.md
docs/Model_Accelaration/Data_Free/: DFQ.md
docs/Model_Accelaration/PTQ/: AdaRound.md
docs/Model_Deployment/: CUDA编程.md  服务器配置.md
docs/Model_Deployment/CANN/: CANN环境配置.md
docs/Model_Deployment/CUDA/: Readme.md
docs/Model_Deployment/CUDA/CUDA_Learning/: CMakeLists.txt
docs/Model_Deployment/CUDA/CUDA_Learning/0_hello_world/: CMakeLists.txt  hello_world.cu
docs/Model_Deployment/CUDA/CUDA_Learning/10_device_information/: device_information.cu
docs/Model_Deployment/CUDA/CUDA_Learning/1_thread_index/: thread_index.cu
docs/Model_Deployment/CUDA/CUDA_Learning/2_MatAdd_operator/: MatAdd_op.cu
docs/Model_Deployment/CUDA/CUDA_Learning/4_divergence/: divergence.cu
docs/Model_Deployment/CUDA/CUDA_Learning/5_sum_matrix2D/: CMakeLists.txt  sum_matrix2D.cu
docs/Model_Deployment/CUDA/CUDA_Learning/6_MatAdd_operator/: CMakeLists.txt
docs/Model_Deployment/CUDA/CUDA_Learning/6_reduceInteger/: CMakeLists.txt  reduceInteger.cu
docs/Model_Deployment/CUDA/CUDA_Learning/Add_operator/: CMakeLists.txt
docs/Model_Deployment/CUDA/CUDA_Learning/Div_operator/: div_op.cu
docs/Model_Deployment/CUDA/CUDA_Learning/Minus_operator/: minus_op.cu
docs/Model_Deployment/CUDA/operators/MatAdd_operator/: CMakeLists.txt  MatAdd_op.cu
docs/Model_Deployment/CUDA/operators/Minus_operator/: CMakeLists.txt
docs/Model_Deployment/CUDA/operators/Mul_operator/: CMakeLists.txt  build.sh
docs/Model_Networks/: Normalization.md  README.md
docs/Programming_Language/cpp/: README.md
docs/Programming_Language/cpp/Design_Pattern/: SOLID原则.md
