add_executable(sumArrays sumArrays.cu)
add_executable(checkDimension checkDimension.cu)
add_executable(defineGridBlock defineGridBlock.cu)
add_executable(sumArraysOnGPU-small-case sumArraysOnGPU-small-case.cu)
add_executable(sumArraysTimer sumArraysTimer.cu)
add_executable(checkThreadIndex checkThreadIndex.cu)
add_executable(checkThreadIndexFloat checkThreadIndexFloat.cu)
add_executable(sumMatrix sumMatrix.cu)
add_executable(checkDeviceInfor checkDeviceInfor.cu)

target_compile_options(sumArrays PRIVATE -g -G -O3)
target_compile_options(checkDimension PRIVATE -g -G -O3)
target_compile_options(defineGridBlock PRIVATE -g -G -O3)
target_compile_options(sumArraysOnGPU-small-case PRIVATE -g -G -O3)
target_compile_options(sumArraysTimer PRIVATE -g -G -O3)
target_compile_options(checkThreadIndex PRIVATE -g -G -O3)
target_compile_options(checkThreadIndexFloat PRIVATE -g -G -O3)
target_compile_options(sumMatrix PRIVATE -g -G -O3)
target_compile_options(checkDeviceInfor PRIVATE -g -G -O3)

install(TARGETS sumArrays DESTINATION chapter02)
install(TARGETS checkDimension DESTINATION chapter02)
install(TARGETS defineGridBlock DESTINATION chapter02)
install(TARGETS sumArraysOnGPU-small-case DESTINATION chapter02)
install(TARGETS sumArraysTimer DESTINATION chapter02)
install(TARGETS checkThreadIndex DESTINATION chapter02)
install(TARGETS checkThreadIndexFloat DESTINATION chapter02)
install(TARGETS sumMatrix DESTINATION chapter02)
install(TARGETS checkDeviceInfor DESTINATION chapter02)